# gal-lang

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  ReadMe.adoc  generate_configuration.sh
.github/workflows/: codeql.yml
cmake/: compile_options_setter.cmake
config/: eve.in  foonathan-memory.in
cpm/: cpm_config.cmake
gsl/: CMakeLists.txt
gsl/include/gsl/: config.hpp
gsl/include/gsl/accelerate/: memory.hpp  string.hpp  string_view.hpp  unordered_map.hpp  unordered_set.hpp  variant.hpp  vector.hpp
gsl/include/gsl/backend/: ast.hpp
gsl/include/gsl/boost/: allocator.hpp  format.hpp  logger.hpp  raw_memory.hpp  string_writer.hpp  vec.hpp  vec_operation.hpp
gsl/include/gsl/container/: unordered_map.hpp  vector.hpp
gsl/include/gsl/core/: core.hpp  file.hpp  file_accessor.hpp  info_formatter.hpp  macro.hpp  node_allocator.hpp  runtime_info.hpp  stack_allocator.hpp  type_info.hpp  value.hpp
gsl/include/gsl/core/core_detail/: core_type.hpp  file_accessor.hpp  file_info.hpp  line_info.hpp  runtime_info.hpp  type_info.hpp  type_traits.hpp
gsl/include/gsl/core/std/: memory.hpp  string.hpp  string_view.hpp  unordered_map.hpp  vector.hpp
gsl/include/gsl/debug/: assert.hpp  debugger.hpp
gsl/include/gsl/frontend/: node.hpp  parse.hpp
gsl/include/gsl/logger/: logger.hpp
gsl/include/gsl/math/: vec.hpp
gsl/include/gsl/memory/: allocator.hpp  memory.hpp  raw.hpp
gsl/include/gsl/misc/: macro.hpp
gsl/include/gsl/parse/: parser.hpp
gsl/include/gsl/simulate/: simulate.hpp
gsl/include/gsl/string/: format.hpp  string.hpp  string_view.hpp
gsl/include/gsl/type/: block.hpp  boolean.hpp  floating_point.hpp  function.hpp  integer.hpp  iterator.hpp  lambda.hpp  raw_string.hpp  table.hpp  type.hpp  type_descriptor.hpp  value.hpp  vector.hpp  wide.hpp
gsl/include/gsl/utility/: function.hpp  utility.hpp
gsl/include/gsl/utils/: allocator.hpp  assert.hpp  hash.hpp  memory_model.hpp  stack_function.hpp  string_pool.hpp  string_writer.hpp  type_traits.hpp
gsl/src/: config.cpp  runtime_info.cpp  string_writer.cpp
gsl/src/backend/: ast.cpp
gsl/src/core/: core.cpp  file.cpp  file_accessor.cpp  module_file_accessor.cpp  node_allocator.cpp  runtime_info.cpp  stack_allocator.cpp
gsl/src/core/core_detail/: file_accessor.cpp  file_info.cpp  line_info.cpp
gsl/src/debug/: assert.cpp  debugger.cpp
gsl/src/frontend/: parse.cpp
gsl/src/memory/: raw.cpp
gsl/src/parse/: parser.cpp
gsl/src/simulate/: simulate.cpp
gsl/src/type/: iterator.cpp  table.cpp  vector.cpp
gsl/src/utils/: allocator.cpp  assert.cpp  memory_model.cpp  string_pool.cpp  string_writer.cpp
standalone_test/: CMakeLists.txt
standalone_test/include/: debug_type_register.hpp
standalone_test/src/: main.cpp  test.txt
unit_test/: CMakeLists.txt
unit_test/src/: dummy.cpp  main.cpp
unit_test/src/boost/: test_string_writer.cpp  test_vec.cpp
unit_test/src/math/: test_vec.cpp
unit_test/src/utils/: test_string_writer.cpp
